--- a/src/style.css
+++ b/src/style.css
@@ -51,14 +51,47 @@
 .background-color\:\#F6F8FC{
 	background-color: #F6F8FC
 }
-.background-color\:\#865dff24{
-	background-color: #865dff24
+.background-color\:\#865dff2e{
+	background-color: #865dff2e
+}
+.background-color\:\$bs{
+	background-color: var(--bs)
 }
 .border\:2px_solid_\$pc{
 	border: 2px solid var(--pc)
 }
 .border\:2px_solid_\#F6F8FC{
 	border: 2px solid #F6F8FC
+}
+.border\:\$sc{
+	border: var(--sc)
+}
+.border\:\$pc{
+	border: var(--pc)
+}
+.border\:\$sc_1px_solid{
+	border: var(--sc) 1px solid
+}
+.border\:\$pc_1px_solid{
+	border: var(--pc) 1px solid
+}
+.border\:\$sc_\.5px_solid{
+	border: var(--sc) .5px solid
+}
+.border\:\$pc_\.5px_solid{
+	border: var(--pc) .5px solid
+}
+.border\:\$sc_\.1px_solid{
+	border: var(--sc) .1px solid
+}
+.border\:\$pc_\.1px_solid{
+	border: var(--pc) .1px solid
+}
+.border\:\#b984ff4f_1px_solid{
+	border: #b984ff4f 1px solid
+}
+.border\:\#865dff57_1px_solid{
+	border: #865dff57 1px solid
 }
 .hover\:border-color\:\$sc:hover{
 	border-color: var(--sc)
@@ -69,26 +102,11 @@
 .border-radius\:2rem{
 	border-radius: 2rem
 }
+.border-radius\:1rem{
+	border-radius: 1rem
+}
 .bottom\:1rem{
 	bottom: 1rem
-}
-.box-shadow\:\#b984ff14_-1px_-1px_10px_10px{
-	box-shadow: #b984ff14 -1px -1px 10px 10px
-}
-.box-shadow\:\#b984ff14_-1px_-1px_5px_10px{
-	box-shadow: #b984ff14 -1px -1px 5px 10px
-}
-.box-shadow\:\#b984ff14_-5px_-5px_5px_5px{
-	box-shadow: #b984ff14 -5px -5px 5px 5px
-}
-.box-shadow\:\#b984ff14_-5px_-5px_2px_5px{
-	box-shadow: #b984ff14 -5px -5px 2px 5px
-}
-.box-shadow\:\#b984ff14_-5px_-5px_5px_1px{
-	box-shadow: #b984ff14 -5px -5px 5px 1px
-}
-.box-shadow\:\#b984ff14_-5px_-5px_10px_2px{
-	box-shadow: #b984ff14 -5px -5px 10px 2px
 }
 .box-shadow\:\#865dff24_-5px_-5px_10px_2px{
 	box-shadow: #865dff24 -5px -5px 10px 2px
@@ -108,20 +126,14 @@
 .color\:\$sc{
 	color: var(--sc)
 }
-.color\:\$Pc{
-	color: var(--Pc)
-}
-.color\:\$pc{
-	color: var(--pc)
-}
 .hover\:cursor\:pointer:hover{
 	cursor: pointer
 }
 .display\:flex{
 	display: flex
 }
-.flex-basis\:500px{
-	flex-basis: 500px
+.flex-basis\:350px{
+	flex-basis: 350px
 }
 .flex-direction\:column{
 	flex-direction: column
@@ -135,8 +147,6 @@
 .font-size\:x-large{
 	font-size: x-large
 }
-.\[h1\]\{font-size\:xxx-large\} h1,
-.\[h1\]\{font-size\:xxx-large\;\} h1,
 .font-size\:xxx-large{
 	font-size: xxx-large
 }
@@ -146,14 +156,14 @@
 .height\:100svh{
 	height: 100svh
 }
-.height\:auto{
-	height: auto
-}
 .justify-content\:center{
 	justify-content: center
 }
 .justify-content\:space-between{
 	justify-content: space-between
+}
+.justify-content\:space-evenly{
+	justify-content: space-evenly
 }
 .left\:calc\(50\%_-_1rem\){
 	left: calc(50% - 1rem)
@@ -164,9 +174,6 @@
 .line-height\:2rem{
 	line-height: 2rem
 }
-.line-height\:1rem{
-	line-height: 1rem
-}
 .line-height\:1\.5rem{
 	line-height: 1.5rem
 }
@@ -176,6 +183,18 @@
 .margin\:\.5rem_0{
 	margin: .5rem 0
 }
+.margin\:\.5rem_1rem{
+	margin: .5rem 1rem
+}
+.margin\:1rem{
+	margin: 1rem
+}
+.margin\:5rem_1rem{
+	margin: 5rem 1rem
+}
+.margin\:4rem_1rem{
+	margin: 4rem 1rem
+}
 .margin-bottom\:1\.5rem{
 	margin-bottom: 1.5rem
 }
@@ -184,15 +203,6 @@
 }
 .margin-bottom\:2\.5rem{
 	margin-bottom: 2.5rem
-}
-.margin-bottom\:2rem{
-	margin-bottom: 2rem
-}
-.margin-left\:\.5rem{
-	margin-left: .5rem
-}
-.margin-left\:\.1rem{
-	margin-left: .1rem
 }
 .margin-left\:\.2rem{
 	margin-left: .2rem
@@ -206,14 +216,14 @@
 .min-width\:350px{
 	min-width: 350px
 }
-.min-width\:490px{
-	min-width: 490px
+.min-width\:450px{
+	min-width: 450px
 }
 .min-width\:650px{
 	min-width: 650px
 }
-.min-width\:450px{
-	min-width: 450px
+.min-width\:300px{
+	min-width: 300px
 }
 .opacity\:\.5{
 	opacity: .5
@@ -224,20 +234,32 @@
 .padding\:\.75rem_1\.5rem{
 	padding: .75rem 1.5rem
 }
-.padding\:3rem_2rem{
-	padding: 3rem 2rem
-}
 .padding\:5rem_2rem{
 	padding: 5rem 2rem
-}
-.padding\:1\.5rem_3rem{
-	padding: 1.5rem 3rem
 }
 .padding\:1\.5rem_5rem{
 	padding: 1.5rem 5rem
 }
 .padding\:\.1rem_\.5rem{
 	padding: .1rem .5rem
+}
+.padding\:1rem{
+	padding: 1rem
+}
+.padding\:1rem_2rem_2rem{
+	padding: 1rem 2rem 2rem
+}
+.padding\:1rem_2\.5rem_2rem{
+	padding: 1rem 2.5rem 2rem
+}
+.padding\:3rem{
+	padding: 3rem
+}
+.padding\:1rem_0{
+	padding: 1rem 0
+}
+.padding\:1rem_0_0{
+	padding: 1rem 0 0
 }
 .position\:relative{
 	position: relative
@@ -251,6 +273,9 @@
 .text-align\:justify{
 	text-align: justify
 }
+.text-align\:center{
+	text-align: center
+}
 .text-decoration\:none{
 	text-decoration: none
 }
@@ -259,15 +284,6 @@
 }
 .active\:transform\:translateY\(5\%\):active{
 	transform: translateY(5%)
-}
-.transform\:translateY\(20\%\){
-	transform: translateY(20%)
-}
-.transform\:translateX\(20\%\){
-	transform: translateX(20%)
-}
-.transform\:translateX\(10\%\){
-	transform: translateX(10%)
 }
 .transform\:translateX\(5\%\){
 	transform: translateX(5%)
@@ -281,17 +297,14 @@
 .width\:100\%{
 	width: 100%
 }
-.width\:5rem{
-	width: 5rem
-}
-.width\:50rem{
-	width: 50rem
-}
 .width\:50vw{
 	width: 50vw
 }
 .width\:70vw{
 	width: 70vw
+}
+.width\:1fr{
+	width: 1fr
 }
 .z-index\:-1{
 	z-index: -1
@@ -301,9 +314,6 @@
 .sm\:flex-direction\:row{
 	flex-direction: row
 }
-.sm\:flex-wrap\:wrap{
-	flex-wrap: wrap
-}
 .sm\:margin\:0{
 	margin: 0
 }
@@ -312,16 +322,7 @@
 }
 }
 
-@media (min-width: 768px) {
-.md\:flex-wrap\:nowrap{
-	flex-wrap: nowrap
-}
-}
-
 @media (min-width: 1024px) {
-.lg\:flex-wrap\:nowrap{
-	flex-wrap: nowrap
-}
 .lg\:left\:100px{
 	left: 100px
 }
@@ -343,44 +344,14 @@
 .maxw1020px\:flex-wrap\:wrap{
 	flex-wrap: wrap
 }
-.maxw1020px\:margin-bottom\:2rem{
-	margin-bottom: 2rem
-}
 .maxw1020px\:margin-bottom\:2\.5rem{
 	margin-bottom: 2.5rem
-}
-.maxw1020px\:min-width\:90\%{
-	min-width: 90%
-}
-.maxw1020px\:min-width\:100\%{
-	min-width: 100%
-}
-.maxw1020px\:min-width\:450px{
-	min-width: 450px
-}
-.maxw1020px\:min-width\:100vw{
-	min-width: 100vw
-}
-.maxw1020px\:min-width\:90vw{
-	min-width: 90vw
-}
-.maxw1020px\:min-width\:95vw{
-	min-width: 95vw
-}
-.maxw1020px\:min-width\:80vw{
-	min-width: 80vw
-}
-.maxw1020px\:min-width\:80\%{
-	min-width: 80%
 }
 .maxw1020px\:min-width\:85\%{
 	min-width: 85%
 }
-.maxw1020px\:padding\:0{
-	padding: 0
-}
-.maxw1020px\:padding\:0_auto{
-	padding: 0 auto
+.maxw1020px\:min-width\:95vw{
+	min-width: 95vw
 }
 .maxw1020px\:padding\:0_1rem{
 	padding: 0 1rem
