--- a/src/style.css
+++ b/src/style.css
@@ -57,35 +57,17 @@
 .background-color\:\$bs{
 	background-color: var(--bs)
 }
+.hover\:background-color\:\#F6F8FC:hover{
+	background-color: #F6F8FC
+}
+.background-color\:\#0e0f10{
+	background-color: #0e0f10
+}
 .border\:2px_solid_\$pc{
 	border: 2px solid var(--pc)
 }
 .border\:2px_solid_\#F6F8FC{
 	border: 2px solid #F6F8FC
-}
-.border\:\$sc{
-	border: var(--sc)
-}
-.border\:\$pc{
-	border: var(--pc)
-}
-.border\:\$sc_1px_solid{
-	border: var(--sc) 1px solid
-}
-.border\:\$pc_1px_solid{
-	border: var(--pc) 1px solid
-}
-.border\:\$sc_\.5px_solid{
-	border: var(--sc) .5px solid
-}
-.border\:\$pc_\.5px_solid{
-	border: var(--pc) .5px solid
-}
-.border\:\$sc_\.1px_solid{
-	border: var(--sc) .1px solid
-}
-.border\:\$pc_\.1px_solid{
-	border: var(--pc) .1px solid
 }
 .border\:\#b984ff4f_1px_solid{
 	border: #b984ff4f 1px solid
@@ -126,6 +108,15 @@
 .color\:\$sc{
 	color: var(--sc)
 }
+.color\:\$bp{
+	color: var(--bp)
+}
+.hover\:color\:\$bp:hover{
+	color: var(--bp)
+}
+.hover\:color\:\$bs:hover{
+	color: var(--bs)
+}
 .hover\:cursor\:pointer:hover{
 	cursor: pointer
 }
@@ -134,6 +125,15 @@
 }
 .flex-basis\:350px{
 	flex-basis: 350px
+}
+.flex-basis\:650px{
+	flex-basis: 650px
+}
+.flex-basis\:365px{
+	flex-basis: 365px
+}
+.flex-basis\:675px{
+	flex-basis: 675px
 }
 .flex-direction\:column{
 	flex-direction: column
@@ -165,6 +165,9 @@
 .justify-content\:space-evenly{
 	justify-content: space-evenly
 }
+.justify-content\:space-around{
+	justify-content: space-around
+}
 .left\:calc\(50\%_-_1rem\){
 	left: calc(50% - 1rem)
 }
@@ -183,17 +186,11 @@
 .margin\:\.5rem_0{
 	margin: .5rem 0
 }
-.margin\:\.5rem_1rem{
-	margin: .5rem 1rem
+.margin\:4rem_1rem{
+	margin: 4rem 1rem
 }
 .margin\:1rem{
 	margin: 1rem
-}
-.margin\:5rem_1rem{
-	margin: 5rem 1rem
-}
-.margin\:4rem_1rem{
-	margin: 4rem 1rem
 }
 .margin-bottom\:1\.5rem{
 	margin-bottom: 1.5rem
@@ -213,6 +210,21 @@
 .max-width\:575px{
 	max-width: 575px
 }
+.max-width\:40\%{
+	max-width: 40%
+}
+.max-width\:900px{
+	max-width: 900px
+}
+.max-width\:80\%{
+	max-width: 80%
+}
+.max-width\:100\%{
+	max-width: 100%
+}
+.max-width\:95\%{
+	max-width: 95%
+}
 .min-width\:350px{
 	min-width: 350px
 }
@@ -222,8 +234,11 @@
 .min-width\:650px{
 	min-width: 650px
 }
-.min-width\:300px{
-	min-width: 300px
+.min-width\:360px{
+	min-width: 360px
+}
+.min-width\:40\%{
+	min-width: 40%
 }
 .opacity\:\.5{
 	opacity: .5
@@ -243,23 +258,38 @@
 .padding\:\.1rem_\.5rem{
 	padding: .1rem .5rem
 }
-.padding\:1rem{
-	padding: 1rem
-}
-.padding\:1rem_2rem_2rem{
-	padding: 1rem 2rem 2rem
-}
 .padding\:1rem_2\.5rem_2rem{
 	padding: 1rem 2.5rem 2rem
 }
-.padding\:3rem{
-	padding: 3rem
-}
-.padding\:1rem_0{
-	padding: 1rem 0
-}
 .padding\:1rem_0_0{
 	padding: 1rem 0 0
+}
+.padding\:2rem_3rem{
+	padding: 2rem 3rem
+}
+.padding\:1rem_2rem{
+	padding: 1rem 2rem
+}
+.padding\:1rem{
+	padding: 1rem
+}
+.padding\:0_3rem{
+	padding: 0 3rem
+}
+.padding\:2rem_0{
+	padding: 2rem 0
+}
+.padding\:\.5rem{
+	padding: .5rem
+}
+.padding\:1\.5rem{
+	padding: 1.5rem
+}
+.padding\:5rem_0{
+	padding: 5rem 0
+}
+.padding\:1rem_3rem{
+	padding: 1rem 3rem
 }
 .position\:relative{
 	position: relative
@@ -303,8 +333,8 @@
 .width\:70vw{
 	width: 70vw
 }
-.width\:1fr{
-	width: 1fr
+.width\:40\%{
+	width: 40%
 }
 .z-index\:-1{
 	z-index: -1
@@ -317,8 +347,14 @@
 .sm\:margin\:0{
 	margin: 0
 }
+.sm\:margin\:1rem{
+	margin: 1rem
+}
 .sm\:margin-left\:1rem{
 	margin-left: 1rem
+}
+.sm\:margin-top\:1rem{
+	margin-top: 1rem
 }
 }
 
